# cardamom

./: .gitignore  LICENSE.txt  README.md  infer_network.py  pyproject.toml  simulate_data.py  visualize_data.py
.github/workflows/: pypi.yml
Network4/Data/: panel_genes.txt  panel_simulated.txt
Network4/Rates/: degradation_rates.txt
Network4/cardamom/: basal.npy  data_bool.npy  inter.npy  inter_t.npy
Semrau/Data/: panel_simulated.txt
Semrau/cardamom/: data_bool.npy  kmin.npy
cardamom/: __init__.py
cardamom/inference/: __init__.py  kinetics.py  network.py
cardamom/model/: base.py
figures_article/Benchmark_on_simulated_data/: figure2.py  infer_SINCERITIES.py  simulate_data_FN4.py  simulate_data_FN8.py
figures_article/Benchmark_on_simulated_data/_scripts/: sincerities.py  utils.py
figures_article/Semrau_network_analysis/: figure4.py  figure5.py
figures_article/Semrau_network_analysis/inferred_networks/: HARISSA.npy  REAL.npy  build_real.py
results_article/Benchmark_on_simulated_data/: infer_CARDAMOM.py  infer_GENIE3.py  infer_HARISSA.py  infer_PEARSON.py  simulate_data_BN8.py  simulate_data_CN5.py  simulate_data_trees.py
results_article/Benchmark_on_simulated_data/_scripts/: _routine PIDC Julia.txt  genie3.py
results_article/Semrau_network_analysis/: figure5_SINCERITIES.py  figure7.py
results_article/Semrau_network_analysis/inferred_networks/: CARDAMOM.npy  GENIE3.npy  SINCERITIES.npy
results_article/Semrau_network_analysis/utils/: plot_network.py  positions_edges.npy
src/cardamom/: __init__.py
src/cardamom/inference/: __init__.py  (+2 more)
(+833 files in other folders)
